# nlp-backend

./: pyproject.toml
nlp_backend/: cleanText.py  databaseConnection.py  publications.py  searches.py  summarization.py  testApi.py  works.py
