[tool.poetry]
name = "nlp-backend"
version = "0.1.0"
description = ""
authors = ["GloodBuster <95661756+GloodBuster@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pdfminer-six = "^20231228"
nltk = "^3.8.1"
sumy = {git = "https://github.com/miso-belica/sumy.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
