[tool.poetry]
name = "nlp-backend"
version = "0.1.0"
description = ""
authors = ["GloodBuster <95661756+GloodBuster@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pdfminer-six = "^20231228"
nltk = "^3.8.1"
sumy = {git = "https://github.com/miso-belica/sumy.git"}
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
pip = "^23.3.2"
setuptools = "^69.0.3"
wheel = "^0.42.0"
spacy = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
